k8s/portainer/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  labels:
    name: portainer
